# ansible-role-base

./: .ansible-lint  README.md  justfile  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
tasks/: main.yml
